2015-04-25  Martin Robinson  <mrobinson@igalia.com>

        Rename ENABLE_3D_RENDERING to ENABLE_3D_TRANSFORMS
        https://bugs.webkit.org/show_bug.cgi?id=144182

        Reviewed by Simon Fraser.

        * DumpRenderTree/win/DumpRenderTree.cpp: Replace all instances of 3D_RENDERING with 3D_TRANSFORMS.

2015-04-25  Dewei Zhu  <dewei_zhu@apple.com>

        https://bugs.webkit.org/show_bug.cgi?id=144038

        Reviewed by Ryosuke Niwa

        Add a script to run Speedometer and JetStream on a browser.

        * Scripts/run-benchmark: Wrapper script to run benchmark.
        (main):
        * Scripts/webkitpy/benchmark_runner/README.md: Introduction of this script.
        * Scripts/webkitpy/benchmark_runner/__init__.py: Added.
        * Scripts/webkitpy/benchmark_runner/benchmark_builder/__init__.py: Added.
        * Scripts/webkitpy/benchmark_runner/benchmark_builder/benchmark_builder_factory.py: Added.
        (BenchmarkBuilderFactory):
        * Scripts/webkitpy/benchmark_runner/benchmark_builder/benchmark_builders.json: Added.
        * Scripts/webkitpy/benchmark_runner/benchmark_builder/generic_benchmark_builder.py: Added.
        (GenericBenchmarkBuilder):
        (GenericBenchmarkBuilder.prepare):
        (GenericBenchmarkBuilder._copyBenchmarkToTempDir):
        (GenericBenchmarkBuilder._applyPatch):
        (GenericBenchmarkBuilder.clean):
        * Scripts/webkitpy/benchmark_runner/benchmark_builder/jetstream_benchmark_builder.py: Added.
        (JetStreamBenchmarkBuilder):
        (JetStreamBenchmarkBuilder.prepare):
        (JetStreamBenchmarkBuilder._runCreateScript):
        * Scripts/webkitpy/benchmark_runner/benchmark_runner.py: Main module that masters all the processes of benchmark running.
        (BenchmarkRunner):
        (BenchmarkRunner.__init__):
        (BenchmarkRunner.execute):
        (BenchmarkRunner.dump):
        (BenchmarkRunner.wrap):
        (BenchmarkRunner.merge):