@@ -3360,6 +3360,15 @@
             "rmondello"
          ]
       },
+      "Sungmann Cho" : {
+         "emails" : [
+            "sungmann.cho@navercorp.com",
+            "sungmann.cho@gmail.com"
+         ],
+         "nicks" : [
+            "mann"
+         ]
+      },
       "Tab Atkins" : {
          "emails" : [
             "tabatkins@google.com",
