@@ -1,3 +1,12 @@
+2015-04-25  Sungmann Cho  <sungmann.cho@navercorp.com>
+
+        Add myself to contributors.json
+        https://bugs.webkit.org/show_bug.cgi?id=144204
+
+        Reviewed by Darin Adler.
+
+        * Scripts/webkitpy/common/config/contributors.json:
+
 2015-04-25  Martin Robinson  <mrobinson@igalia.com>
 
         Rename ENABLE_3D_RENDERING to ENABLE_3D_TRANSFORMS
